<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="support_lib_version">&current_match_version;</string>
    <string name="setup_module_download_url_github" translatable="false">https://github.com/Alcatraz323/audiohq_module/releases</string>
    <string name="setup_module_download_url_fastgit" translatable="false">https://hub.fastgit.org/Alcatraz323/audiohq_module/releases</string>
    <string name="update_date">20201126</string>
    <string name="update_title">20201126 stable_7_anniversary_081e45d</string>
    <string name="update_info">
        1.Pin apps to float window and Playing section even if it is not playing\n
        2.Direct trigger(Accessibility Service)\n
        3.Switchable "exclude form recent tasks"\n
        4.Root shell option\n
        5.Icon change\n
        6.Android 11 Support(requires latest github release module)\n
        7.Default accent color change\n
        8.Add 1st Anniversary content\n
        9.Setup wizard optimization\n
        10.Optimize main screen performance\n
        11.Adaptive Icon\n
        12.Unlock settings even getting shell failure
    </string>
    <string name="app_name">Audio HeadQuarter</string>
    <string name="activity_pref">Preferences</string>
    <string name="main_menu_1">Settings</string>
    <string name="main_menu_2">About</string>
    <string name="main_menu_3">Start service</string>
    <string name="main_menu_4">Stop service</string>
    <string name="main_menu_5">Refresh</string>
    <string name="main_menu_6">Console output</string>
    <string name="main_report_bug">Please deliver the error to the address below</string>
    <string name="toast_no_root">No root, this program will not work</string>
    <string name="toast_implementing">Implementing</string>
    <string name="rc_modified_server_noneed">Built_in server running</string>
    <string name="service_toast_already_running">Service already running</string>
    <string name="service_toast_already_killed">Service has been killed</string>
    <string name="adjust_title">Precise Control</string>
    <string name="adjust_confirm">Apply</string>
    <string name="til_err_parse">Not a float number</string>
    <string name="til_err_ofr">Out of range</string>
    <string name="read_profile_err">Read profile error</string>
    <string name="java_server_running">Java Server Running</string>
    <string name="accessibility_description">AudioHQ volume key listener, pls do not enable when you enable the \'getevent\' base direct trigger</string>
    <string name="main_card_status_querying">Querying</string>
    <string name="main_card_playing">Playing</string>
    <string name="main_card_playing_indicator">There are %s processes playing in AudioMixer</string>
    <string name="main_card_preset">Application Preset</string>
    <string name="main_card_preset_indicator">%s applications contains profile</string>
    <string name="main_card_help">Help and Support</string>
    <string name="main_card_invalid">Invalid</string>
    <string name="toast_copied">Copied</string>
    <string name="ad_pb">Yes</string>
    <string name="ad_nb">Cancel</string>
    <string name="ad_pb2">Yes</string>
    <string name="ad_pb_no_rc_modify">Install, but no modify to .rc files</string>
    <string name="ad_nb2">No</string>
    <string name="ad_nb3">Close</string>
    <string name="ad_nb4">Clear</string>
    <string name="ad_never_again">Never show again</string>
    <string name="ad_processing">Processing…</string>
    <string name="empty_view">Empty</string>
    <string name="check_root">Root</string>
    <string name="check_selinux">Selinux Status</string>
    <string name="check_support">If Api/Abi Supported</string>
    <string name="check_native_elf_info">Native version</string>
    <string name="check_native_lib_info">Lib version</string>
    <string name="check_audioserver_info">\'audioserver\' elf info </string>
    <string name="check_daemon_status">Daemon status</string>
    <string name="check_daemon_status_alive">Alive</string>
    <string name="check_daemon_status_dead">Dead</string>
    <string name="check_daemon_restart">Try restart daemon</string>
    <string name="aplc_split_control">Split control</string>
    <string name="aplc_precise_control">Precise control</string>
    <string name="aplc_left">L[0,1]</string>
    <string name="aplc_right">R[0,1]</string>
    <string name="aplc_general">General[0,1]</string>
    <string name="aplc_use_process_control">Use process control</string>
    <string name="preset_disabled">Preset function disabled</string>
    <string name="preset_disabled_define">This would not work when there are no server running or the
    built-in server is not enabled</string>
    <string name="preset_tutorial_title">Tutorial</string>
    <string name="preset_tutorial_content">Assume you want to set a process called io.alcatraz.audiohq:play
    (Attention!!!Process name does not equals to package name, you can try run \'ps\' command to find out),
    Then you type the full process name below and the parameter below, after everything is checked ,apply it(If you
        are  using weakkey mode you can use package name here),Finally, use it at your own risk, good luck</string>
    <string name="preset_process_name">Process name:</string>
    <string name="preset_list_sum">%d Packages</string>
    <string name="preset_list_notice">Notice: This page would not load the profile you have set</string>
    <string name="preset_loading">Loading…</string>
    <string name="preset_search_hint">App name/Package name</string>
    <string name="preset_tab_all_apps">All Apps</string>
    <string name="preset_tab_has_set">Has set</string>
    <string name="preset_status_has_profile">Has applied profile， </string>
    <string name="preset_status_no_profile">No applied profile， </string>
    <string name="preset_status_muted">Muted</string>
    <string name="preset_status_unmuted">Not muted</string>
    <string name="preset_action_search">Search</string>
    <string name="preset_conflicted">\ \ Pkg level profile exist, this profile is useless</string>
    <string name="preset_inner_title">Preset profile</string>
    <string name="preset_manual_add">Manual add</string>
    <string name="preset_manual_hint">Process name</string>
    <string name="preset_manual_error">Invalid string!</string>
    <string name="panel_control_title_1">Volume</string>
    <string name="panel_control_general">General Volume</string>
    <string name="panel_control_channel">Channel Volume</string>
    <string name="panel_control_left">Left Volume</string>
    <string name="panel_control_right">Right Volume</string>
    <string name="panel_control_mute">Mute this application</string>
    <string name="panel_control_tips_title">Tips</string>
    <string name="panel_control_tips_message">The modification below will be multiplied under system volume,
    and the channel volume will be multiplied under the general volume</string>
    <string name="panel_control_operation">Ops: </string>
    <string name="panel_control_operation_ignore_confirm">Added to whitelist.</string>
    <string name="playing_filter">Show active process only</string>
    <string name="playing_why_no_title">Why some app is not in the list</string>
    <string name="setup_3_install_title">Install the module</string>
    <string name="setup_3_install_info">Now, go to the website to download the module and install.
        This action may cause DAMAGE to your system, please MAKE SURE you know how to recover before you
    install the module, if you have installed pls ignore this and check the checkbox below</string>
    <string name="setup_3_install_github_down">Github</string>
    <string name="setup_3_install_fastgit_down">Fastgit</string>
    <string name="setup_3_installed">I have installed the matched module</string>
    <string name="setup_3_installed_title">Target magisk module version</string>
    <string name="setup_3_installed_summary">Current apk supports native revision : &current_match_version;</string>
    <string name="setup_3_current_installed">Current status: \n%s</string>
    <string name="pref_1_t">Background</string>
    <string name="pref_1_4">Float Service</string>
    <string name="pref_1_4_summary">Run a service to show float window when the system volume is changed(grant ignore battery optimization pls)</string>
    <string name="pref_2_t">Security</string>
    <string name="pref_2_t_summary">Default silent, default profiles</string>
    <string name="pref_3_t">Others</string>
    <string name="pref_3_t_summary">check update, profile clear and so on</string>
    <string name="pref_3_1">Check update</string>
    <string name="pref_3_2">Clear profiles</string>
    <string name="pref_3_3">Uninstall native files</string>
    <string name="pref_4_t">Float window</string>
    <string name="pref_4_t_summary">Float service toggle and customization</string>
    <string name="pref_4_1">Window layout gravity</string>
    <string name="pref_4_2">Background color</string>
    <string name="pref_4_3">Use foreground notification</string>
    <string name="pref_4_3_summary">This will create a foreground notification to keep float service alive</string>
    <string name="pref_4_4">Dismiss delay(ms)</string>
    <string name="pref_4_5">Top margin(dp) For the 8.1 and below in the future</string>
    <string name="pref_4_6">Top margin for landscape</string>
    <string name="pref_4_7">Icon tint</string>
    <string name="pref_4_8">Toggle size</string>
    <string name="pref_4_9">Font color</string>
    <string name="pref_4_10">Side margin(dp)</string>
    <string name="pref_4_11">Toggle corner radius(dp)</string>
    <string name="pref_4_12">Card corner radius(dp)</string>
    <string name="pref_4_13">SeekBar color</string>
    <string name="pref_4_14">Directly trigger the float window(Experimental)</string>
    <string name="pref_4_14_summary">(Experimental)Run a process to listen the \'getevent\' stream, may not work on some device</string>
    <string name="pref_4_15">Side margin for landscape(dp)</string>
    <string name="pref_4_16">Filter</string>
    <string name="pref_4_16_summary">Set the package which will not display in float window</string>
    <string name="pref_4_17">Background color(Dark Theme)</string>
    <string name="pref_4_18">No window when empty</string>
    <string name="pref_4_18_summary">The window will not show when the play list is empty, need to kill this app and restart to work</string>
    <string name="pref_4_19">Default expanded window</string>
    <string name="pref_4_19_summary">Directly show the control panel when is on</string>
    <string name="pref_4_20">Directly trigger the float window</string>
    <string name="pref_4_20_summary">Use accessibility service to trigger the panel, pls do not enable both direct trigger same time</string>
    <string name="pref_4_21">Sticky Apps</string>
    <string name="pref_4_21_summary">Pin some app to float window and Playing section even it is not playing sound</string>
    <string name="pref_4_dark_t">Dark Theme</string>
    <string name="pref_4_light_t">Light Theme</string>
    <string name="quiz_2020_sudoku_instruction">Please fill the blank by row, only enter the missing numbers, no space between numbers such as "12345"</string>
    <string name="sudoku_row_1">Row 1</string>
    <string name="sudoku_row_2">Row 2</string>
    <string name="sudoku_row_3">Row 3</string>
    <string name="sudoku_row_5">Row 5</string>
    <string name="sudoku_row_6">Row 6</string>
    <string name="sudoku_row_7">Row 7</string>
    <string name="sudoku_row_8">Row 8</string>
    <string name="sudoku_row_9">Row 9</string>
    <string name="transition_preset_image" translatable="false">preset_image</string>
    <string name="transition_preset_indicator" translatable="false">preset_indicator</string>
    <string name="transition_preset_fab" translatable="false">preset_fab</string>
</resources>