<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_1_t">
        <CheckBoxPreference
            android:icon="@drawable/ic_branding_watermark_gray_24dp"
            android:key="float_service"
            android:summary="@string/pref_1_4_summary"
            android:title="@string/pref_1_4" />

        <PreferenceScreen
            android:key="float_sticky_apps"
            android:title="@string/pref_4_21"
            android:summary="@string/pref_4_21_summary"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_4_dark_t">
        <EditTextPreference
            android:defaultValue="#000000"
            android:key="float_background_dark"
            android:title="@string/pref_4_17" />

        <EditTextPreference
            android:defaultValue="#009688"
            android:key="float_icon_tint_dark"
            android:title="@string/pref_4_7" />

        <EditTextPreference
            android:defaultValue="#3C3C3C"
            android:key="float_font_color_dark"
            android:title="@string/pref_4_9" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_4_light_t">
        <EditTextPreference
            android:defaultValue="#ffffff"
            android:key="float_background"
            android:title="@string/pref_4_2" />

        <EditTextPreference
            android:defaultValue="#009688"
            android:key="float_icon_tint"
            android:title="@string/pref_4_7" />

        <EditTextPreference
            android:defaultValue="#3C3C3C"
            android:key="float_font_color"
            android:title="@string/pref_4_9" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_4_t">
        <ListPreference
            android:defaultValue="start_top"
            android:dialogTitle="@string/pref_4_1"
            android:entries="@array/entries_for_float_gravity"
            android:entryValues="@array/entryvalue_for_float_gravity"
            android:key="float_gravity"
            android:title="@string/pref_4_1" />

        <CheckBoxPreference
            android:key="float_default_expanded_panel"
            android:summary="@string/pref_4_19_summary"
            android:title="@string/pref_4_19" />

        <CheckBoxPreference
            android:key="float_foreground_notification"
            android:summary="@string/pref_4_3_summary"
            android:title="@string/pref_4_3" />

        <EditTextPreference
            android:defaultValue="3000"
            android:key="float_dismiss_delay"
            android:title="@string/pref_4_4" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="float_margin_top"
            android:title="@string/pref_4_5" />

        <EditTextPreference
            android:defaultValue="0"
            android:key="float_margin_top_landscape"
            android:title="@string/pref_4_6" />

        <EditTextPreference
            android:defaultValue="52"
            android:key="float_toggle_size"
            android:title="@string/pref_4_8" />

        <EditTextPreference
            android:defaultValue="8"
            android:key="float_side_margin"
            android:title="@string/pref_4_10" />

        <EditTextPreference
            android:defaultValue="8"
            android:key="float_side_margin_landscape"
            android:title="@string/pref_4_15" />

        <EditTextPreference
            android:defaultValue="2"
            android:key="float_toggle_corner_radius"
            android:title="@string/pref_4_11" />

        <EditTextPreference
            android:defaultValue="2"
            android:key="float_card_radius"
            android:title="@string/pref_4_12" />

        <EditTextPreference
            android:defaultValue="#ff5722"
            android:key="float_seek_bar_color"
            android:title="@string/pref_4_13" />

        <PreferenceScreen
            android:key="float_filter"
            android:title="@string/pref_4_16"
            android:summary="@string/pref_4_16_summary"/>

        <CheckBoxPreference
            android:key="float_no_empty_window"
            android:summary="@string/pref_4_18_summary"
            android:title="@string/pref_4_18" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="float_direct_react"
            android:summary="@string/pref_4_14_summary"
            android:title="@string/pref_4_14" />

        <PreferenceScreen
            android:key="float_accessibility_trigger"
            android:title="@string/pref_4_20"
            android:summary="@string/pref_4_20_summary"/>
    </PreferenceCategory>
</PreferenceScreen>