<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:visibility="visible"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/setup_3_install_title"
                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/setup_3_install_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/setup_3_go_website_github"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/setup_3_install_github_down"
                        android:textAllCaps="false" />

                    <Button
                        android:id="@+id/setup_3_go_website_fastgit"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/setup_3_install_fastgit_down"
                        android:textAllCaps="false" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:visibility="visible"
            app:cardElevation="2dp"
            app:cardMaxElevation="4dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="end"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/setup_3_installed_title"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.ExpandedMenu.Item" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/setup_3_installed_summary" />

                    <!--            <TextView-->
                    <!--                android:id="@+id/setup_3_detected"-->
                    <!--                android:layout_width="match_parent"-->
                    <!--                android:layout_height="wrap_content"-->
                    <!--                android:layout_marginStart="16dp" />-->

                    <TextView
                        android:id="@+id/setup_3_installed_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/setup_3_current_installed" />

                    <CheckBox
                        android:id="@+id/setup_3_installed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/setup_3_installed" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/setup_3_installed_refresh"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_refresh_black_24dp"
                    android:tint="@color/base_gray_tint" />
            </FrameLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>